chapter6/wiki-copy/stset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wiki-replicator-sts
  namespace: wiki-replicator
spec:
  serviceName: wiki-replicator-headless
  replicas: 2
  selector:
    matchLabels:
      app: wiki-replicator
  template:
    metadata:
      labels:
        app: wiki-replicator
      annotations:
        traffic.sidecar.istio.io/excludeOutboundPorts: "443,53"
    spec:
      containers:
        - name: wiki-replicator
          image: nginx:alpine
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "64Mi"
              cpu: "50m"
          volumeMounts:
            - name: wiki-replicator-pv
              mountPath: /usr/share/nginx/html

  volumeClaimTemplates:
    - metadata:
        name: wiki-replicator-pv
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 50Mi
